crates/ffai-kernels-std/tests/snapshots/steel_msl_snapshots__quantized_nax_f16_msl.snap
---
source: crates/ffai-kernels-std/tests/steel_msl_snapshots.rs
assertion_line: 112
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
#include <metal_simdgroup>
#include <MetalPerformancePrimitives/MetalPerformancePrimitives.h>
#endif

kernel void mt_qmm_nax(
    const device uint *w [[buffer(0)]],
    const device half *scales [[buffer(1)]],
    const device half *biases [[buffer(2)]],
    const device half *x [[buffer(3)]],
    device half *out [[buffer(4)]],
    constant uint &k [[buffer(5)]],
    constant uint &n [[buffer(6)]],
    constant uint &gs_per_row [[buffer(7)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
    uint tgid_x = _tgid3.x;
    uint tgid_y = _tgid3.y;
    threadgroup half Xs[1152];
    threadgroup half Ws[1152];
    threadgroup float OutScratch[1024];

    auto v_lane = simd_lane;
    uint v_sg = simd_group;
    uint v2 = 32u;
    auto v_lane_in_tg = ((v_sg * v2) + v_lane);
    uint v5 = 2u;
    uint v7 = 1u;
    uint v9 = 16u;
    auto v_sg_m_base = ((v_sg / v5) * v9);
    uint v11 = 16u;
    auto v_sg_n_base = ((v_sg & v7) * v11);
    auto v13 = tgid_y;
    uint v14 = 32u;
    auto v_x_m_base = v13 * v14;
    auto v16 = tgid_x;
    uint v17 = 32u;
    auto v_w_n_base = v16 * v17;
    // --- CoopTileSetup: gemm (16×16×32) ---
    constexpr auto gemm_desc = mpp::tensor_ops::matmul2d_descriptor(
        /*M=*/16, /*N=*/16, /*K=*/32,
        /*ta=*/false, /*tb=*/true, /*tc=*/false,
        mpp::tensor_ops::matmul2d_descriptor::mode::multiply_accumulate);
    mpp::tensor_ops::matmul2d<gemm_desc, metal::execution_simdgroup> gemm_op;
    auto gemm_ct_a = gemm_op.template get_left_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_b = gemm_op.template get_right_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_c = gemm_op.template get_destination_cooperative_tensor<decltype(gemm_ct_a), decltype(gemm_ct_b), float>();
    for (uint16_t _i = 0; _i < gemm_ct_c.get_capacity(); ++_i) gemm_ct_c[_i] = {};
    uint v19 = 4u;
    auto v_x_m_row = v_lane_in_tg / v19;
    uint v21 = 3u;
    auto v_x_k_quad = (v_lane_in_tg & v21);
    uint v23 = 8u;
    auto v_x_k_base = v_x_k_quad * v23;
    uint v25 = 36u;
    auto v26 = v_x_m_row * v25;
    auto v_x_ws_base = v26 + v_x_k_base;
    auto v28 = k;
    uint v29 = 8u;
    auto v_wn_plus_wr = v_w_n_base + v_x_m_row;
    auto v32 = gs_per_row;
    auto v_sb_base = v_wn_plus_wr * v32;
    auto v_packs_per_row = v28 / v29;
    auto v_w_pack_row_base = v_wn_plus_wr * v_packs_per_row;
    uint v35 = 36u;
    auto v_xs_sg_off = v_sg_m_base * v35;
    uint v37 = 36u;
    auto v_ws_sg_off = v_sg_n_base * v37;
    uint v39 = 256u;
    auto v_sg_scratch_off = v_sg * v39;
    auto v43 = v_x_m_base + v_x_m_row;
    auto v44 = v43 * v28;
    uint v47 = 0u;
    uint v48 = 8u;
    uint v49 = 1u;
    uint v54 = 8u;
    uint v59 = 8u;
    auto v60 = v_x_k_quad * v59;
    uint v62 = 64u;
    uint v69 = 0u;
    uint v70 = 8u;
    uint v71 = 1u;
    uint v72 = 4u;
    uint v75 = 15u;
    uint v41 = 0u;
    uint v42 = 32u;
    for (uint i_0 = v41; i_0 < v28; i_0 += v42) {
        auto v45 = v44 + i_0;
        auto v_x_row_dev_base = v45 + v_x_k_base;
        for (uint i_1 = v47; i_1 < v48; i_1 += v49) {
            auto v50 = v_x_row_dev_base + i_1;
            auto v51 = x[v50];
            auto v53 = v_x_ws_base + i_1;
            float v_xv = static_cast<float>(v51);
            Xs[v53] = v_xv;
        }
        auto v55 = i_0 / v54;
        auto v_pack_dev = ((v_w_pack_row_base + v55) + v_x_k_quad);
        auto v_packed = w[v_pack_dev];
        auto v_g = ((i_0 + v60) / v62);
        auto v_sb_off = v_sb_base + v_g;
        auto v65 = scales[v_sb_off];
        float v_scale = static_cast<float>(v65);
        auto v67 = biases[v_sb_off];
        float v_bias = static_cast<float>(v67);
        for (uint i_2 = v69; i_2 < v70; i_2 += v71) {
            auto v73 = i_2 * v72;
            auto v_nib = static_cast<float>(((v_packed >> v73) & v75));
            auto v80 = ((v_scale * v_nib) + v_bias);
            auto v78 = v_x_ws_base + i_2;
            Ws[v78] = v80;
        }
        threadgroup_barrier(mem_flags::mem_threadgroup);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tA(Xs + v_xs_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_a.load(gemm_tA);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tB(Ws + v_ws_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_b.load(gemm_tB);
        gemm_op.run(gemm_ct_a, gemm_ct_b, gemm_ct_c);
        threadgroup_barrier(mem_flags::mem_threadgroup);
    }
    metal::tensor<threadgroup float, metal::extents<int, 16, 16>, metal::tensor_inline> gemm_tC(OutScratch + v_sg_scratch_off, metal::extents<int, 16, 16>{}); gemm_ct_c.store(gemm_tC);
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_out_n_base = v_w_n_base + v_sg_n_base;
    uint v83 = 2u;
    auto v_o_row = v_lane / v83;
    uint v85 = 1u;
    uint v87 = 8u;
    auto v86 = (v_lane & v85);
    auto v_o_col_base = v86 * v87;
    uint v93 = 16u;
    auto v94 = v_o_row * v93;
    auto v95 = v_sg_scratch_off + v94;
    auto v_out_m_base = v_x_m_base + v_sg_m_base;
    auto v98 = v_out_m_base + v_o_row;
    uint v1073741828 = 0u;
    auto v1073741829 = v_o_col_base + v1073741828;
    auto v1073741830 = v95 + v1073741829;
    auto v1073741831 = OutScratch[v1073741830];
    auto v1073741832 = n;
    auto v1073741833 = v_out_n_base + v1073741829;
    half v1073741834 = static_cast<half>(v1073741831);
    auto v1073741835 = ((v98 * v1073741832) + v1073741833);
    out[v1073741835] = v1073741834;
    uint v1073741836 = 1u;
    auto v1073741837 = v_o_col_base + v1073741836;
    auto v1073741838 = v95 + v1073741837;
    auto v1073741839 = OutScratch[v1073741838];
    auto v1073741840 = n;
    auto v1073741841 = v_out_n_base + v1073741837;
    half v1073741842 = static_cast<half>(v1073741839);
    auto v1073741843 = ((v98 * v1073741840) + v1073741841);
    out[v1073741843] = v1073741842;
    uint v1073741844 = 2u;
    auto v1073741845 = v_o_col_base + v1073741844;
    auto v1073741846 = v95 + v1073741845;
    auto v1073741847 = OutScratch[v1073741846];
    auto v1073741848 = n;
    auto v1073741849 = v_out_n_base + v1073741845;
    half v1073741850 = static_cast<half>(v1073741847);
    auto v1073741851 = ((v98 * v1073741848) + v1073741849);
    out[v1073741851] = v1073741850;
    uint v1073741852 = 3u;
    auto v1073741853 = v_o_col_base + v1073741852;
    auto v1073741854 = v95 + v1073741853;
    auto v1073741855 = OutScratch[v1073741854];
    auto v1073741856 = n;
    auto v1073741857 = v_out_n_base + v1073741853;
    half v1073741858 = static_cast<half>(v1073741855);
    auto v1073741859 = ((v98 * v1073741856) + v1073741857);
    out[v1073741859] = v1073741858;
    uint v1073741860 = 4u;
    auto v1073741861 = v_o_col_base + v1073741860;
    auto v1073741862 = v95 + v1073741861;
    auto v1073741863 = OutScratch[v1073741862];
    auto v1073741864 = n;
    auto v1073741865 = v_out_n_base + v1073741861;
    half v1073741866 = static_cast<half>(v1073741863);
    auto v1073741867 = ((v98 * v1073741864) + v1073741865);
    out[v1073741867] = v1073741866;
    uint v1073741868 = 5u;
    auto v1073741869 = v_o_col_base + v1073741868;
    auto v1073741870 = v95 + v1073741869;
    auto v1073741871 = OutScratch[v1073741870];
    auto v1073741872 = n;
    auto v1073741873 = v_out_n_base + v1073741869;
    half v1073741874 = static_cast<half>(v1073741871);
    auto v1073741875 = ((v98 * v1073741872) + v1073741873);
    out[v1073741875] = v1073741874;
    uint v1073741876 = 6u;
    auto v1073741877 = v_o_col_base + v1073741876;
    auto v1073741878 = v95 + v1073741877;
    auto v1073741879 = OutScratch[v1073741878];
    auto v1073741880 = n;
    auto v1073741881 = v_out_n_base + v1073741877;
    half v1073741882 = static_cast<half>(v1073741879);
    auto v1073741883 = ((v98 * v1073741880) + v1073741881);
    out[v1073741883] = v1073741882;
    uint v1073741884 = 7u;
    auto v1073741885 = v_o_col_base + v1073741884;
    auto v1073741886 = v95 + v1073741885;
    auto v1073741887 = OutScratch[v1073741886];
    auto v1073741888 = n;
    auto v1073741889 = v_out_n_base + v1073741885;
    half v1073741890 = static_cast<half>(v1073741887);
    auto v1073741891 = ((v98 * v1073741888) + v1073741889);
    out[v1073741891] = v1073741890;
#else
    // Pre-Metal-4 stub: mpp::tensor_ops is unavailable.
#endif
}
